# muhfl

./: dune-project  muhfl.opam  muhfl.opam.locked  muhfl.opam.template  readme.md  run_muhfl.sh
.github/workflows/: ci.yml
benchmark/: run_muapprox_katsura.sh  run_muapprox_katsura_no_options.sh  run_muapprox_katsura_replacer.sh
bin2/: abbrev.ml  add_arguments.ml  add_nu_level_extra_arguments.ml  as_program.ml  branching_time_program_converter.ml  check_formula_equality.ml  check_shadowing.ml  convert_nu_hflz_to_program_with_exception.ml  converter.ml  dual.ml  dune  eliminate_unused_argument.ml  evaluate_hflz.ml  ltl_converter.ml  mufu.ml  remove_disjunctions.ml  reorder_arguments.ml  simplify.ml  simplify_model.ml  to_prefix_notation.ml
docker/: Dockerfile
lib/: dune  muhfl.ml  options.ml
lib/branching_time_program/: dune  trans_program.ml
lib/ltl_program/: dune
lib/manipulate/: abbrev_variable_numbers.ml  add_arguments_adding.ml  add_arguments_definition.ml  add_arguments_entry.ml  add_arguments_infer_partial_application.ml  add_arguments_infer_usage.ml  add_arguments_tuple.ml  add_arguments_unify_flags.ml  add_nu_level_extra_arguments.ml  check_formula_equality.ml  constant_propagation.ml  dune  eliminate_unused_argument.ml  eliminate_unused_argument_util.ml  env.ml  env_no_value.ml  env_no_value.mli  hes_optimizer.ml  hflz_manipulate.ml  hflz_manipulate.mli  hflz_manipulate_2.ml  hflz_manipulate_test.ml  hflz_typecheck.ml  hflz_util.ml  id.ml  print_syntax.ml  remove_disjunctions.ml  reorder_arguments.ml  simplify_bound.ml  simplify_if_condition.ml  type_hflz.ml
lib/mufu_core/: arithmeticProcessor.ml  dune  matchMaker.ml  muFU_core.ml  printer.ml  seperator.ml  transformer.ml  z3Interface.ml
lib/muhfl_prover/: dune  mochi_solver.ml  muhfl_prover.ml  solve_options.ml
lib/options/: hflmc2_options.ml
lib/raw_program/: dune
lib/syntax/: hflmc2_syntax.ml  idMap.ml  idSet.ml  parser.mly  print.ml  raw_hflz.ml  trans.ml
lib/util/: dune  hflmc2_util.ml
